--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-<h1> teset <h1>
+<h1>싱글톤 패턴에 대하여 With Unity C#</h1>
+
+<h2>싱글톤 패턴이란?</h2>
+<p>싱글톤 패턴은 클래스에 인스턴스가 하나만 있도록 하면서 이 인스턴스에 대한 전역 접근 지점을 제공하는 생성 디자인 패턴.<br></p>
+ <p>싱글톤 패턴을 사용하는 이유는 다음과 같다.<br></p>   
+
+    1. 특정 클래스의 인스턴스가 하나만 존재해야 할 때<br>
+    2. 특정 클래스의 인스턴스를 공유해야 할 때<br>
+    3. 특정 클래스의 인스턴스를 다른 클래스에서 쉽게 접근해야 할 때<br>
+
+<h2>싱글톤 패턴의 장단점</h2>
+
+<p><h3>장점</h3></p>
+<p>
+1. 특정 클래스의 인스턴스가 하나만 존재하도록 보장.<br>
+2. 특정 클래스의 인스턴스를 공유할 수 있다.<br>
+3. 특정 클래스의 인스턴스를 다른 클래스에게 쉽게 접근할 수 있다.<br>
+</p>
+
+<p><h3>단점</h3></p>
+<p>
+1. 모든 클래스에서 이 인스턴스에 접근할 수 있어 캡슐화가 깨지기 쉽다.<br>
+2. 싱글톤 패턴은 다른 클래스의 인스턴스들과 결합도가 높아져 이로 인해 싱글톤 패턴은 유지보수가 어려워진다.<br>
+</p>
+
+<p><h3>유니티 게임 개발에서의 싱글톤 패턴은 어떨 때 사용하는가?</h3></p>
+<p>
+1. 게임의 전역 상태를 관리하는 경우<br>
+2. 여러 클래스가 공유해야 하는 데이터가 있는 경우<br>
+3. 단일 인스턴스가 필요한 클래스를 구현하는 경우
+</p>
+
+<p><h3>유니티 게임 개발에서의 싱글톤 패턴은 어떨 때 사용하는가?</h3></p>
+<p>
+1. 게임의 전역 상태를 관리하는 경우<br>
+2. 여러 클래스가 공유해야 하는 데이터가 있는 경우<br>
+3. 단일 인스턴스가 필요한 클래스를 구현하는 경우<br>
+(주로 매니저와 관련된 구현을 할 때 싱글톤 패턴이 자주 사용된다.)
+</p>
+
+<p><h3>싱글톤 예제 코드</h3></p>
+<p>
+    <img src="singleton.png">
+</p>
