--- a/index.html
+++ b/index.html
@@ -40,5 +40,5 @@
 
 <p><h3>싱글톤 예제 코드</h3></p>
 <p>
-    <img src="https://i1.ruliweb.com/img/23/03/29/1872cb2fac25709c2.jpg">
+    <img src="https://github.com/Heo-Jaewon/JaewonHeo.github.io/blob/main/image/singleton.png?raw=true">
 </p>
