--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>싱글톤 패턴에 대하여 With Unity C#</h1>
 <P>
-    <img src="">
+    <img src="https://github.com/Heo-Jaewon/JaewonHeo.github.io/blob/main/image/IMG_2960.jpeg?raw=true">
 </P>
 
 <h2>싱글톤 패턴이란?</h2>
